--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/grayscale.min.css" rel="stylesheet">
+  <link href="css/animate.css" rel="stylesheet">
 
 </head>
 
@@ -49,11 +50,13 @@
     </div>
   </nav>
 
-  <!-- Header -->
+  <!-- Header   -->
   <header class="masthead">
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
-        <h1 class="mx-auto my-0 text-uppercase">TECHIALIST</h1>
+        <h1 class="animated flip" class="mx-auto my-0 text-uppercase">TECHIALIST</h1>
+        <br>
+        <br>
         <h2 class="text-white-50 mx-auto mt-2 mb-5">Coming Soon.</h2>
         <a href="#about" class="btn btn-primary js-scroll-trigger">Get Started</a>
       </div>
@@ -65,9 +68,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
-          <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-            <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+          <h2 class="text-white mb-4">Built Responsive</h2>
+          <p class="text-white-50">Scale on all devices large or small.
         </div>
       </div>
       <img src="img/ipad.png" class="img-fluid" alt="">
@@ -222,6 +224,7 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/grayscale.min.js"></script>
+
 
 </body>
 
