--- a/index.html
+++ b/index.html
@@ -195,13 +195,13 @@
 
       <div class="social d-flex justify-content-center">
         <a href="#" class="mx-2">
-          <i class="fab fa-twitter"></i>
+          <i class="fab fa-twitter" href="https://twitter.com/Techialist"></i>
         </a>
         <a href="#" class="mx-2">
-          <i class="fab fa-facebook-f"></i>
+          <i class="fab fa-facebook-f" href="https://www.facebook.com/Techialist"></i>
         </a>
         <a href="#" class="mx-2">
-          <i class="fab fa-github"></i>
+          <i class="fab fa-github" href="https://techialist.github.io/"></i>
         </a>
       </div>
 
