updated with social media

--- a/index.html
+++ b/index.html
@@ -194,14 +194,14 @@
       </div>
 
       <div class="social d-flex justify-content-center">
-        <a href="#" class="mx-2">
-          <i class="fab fa-twitter" href="https://twitter.com/Techialist"></i>
+        <a href="https://twitter.com/Techialist" class="mx-2">
+          <i class="fab fa-twitter"></i>
         </a>
-        <a href="#" class="mx-2">
-          <i class="fab fa-facebook-f" href="https://www.facebook.com/Techialist"></i>
+        <a href="https://www.facebook.com/Techialist" class="mx-2">
+          <i class="fab fa-facebook-f"></i>
         </a>
-        <a href="#" class="mx-2">
-          <i class="fab fa-github" href="https://techialist.github.io/"></i>
+        <a href="https://techialist.github.io/" class="mx-2">
+          <i class="fab fa-github"></i>
         </a>
       </div>
 
