--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="animated bounce" class="navbar-brand js-scroll-trigger" href="#page-top">Welcome to Techialist</a>
+      <a class="animated bounce" class="navbar-brand js-scroll-trigger" href="#page-top">Welcome</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -54,7 +54,7 @@
   <header class="masthead">
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
-        <h1 class="animated flip" class="mx-auto my-0 text-uppercase">TECHIALIST</h1>
+        <h1 class="animated flip" class="mx-auto my-0 text-uppercase">Coming Soon/h1>
         <br>
         <br>
         <h2 class="text-white-50 mx-auto mt-2 mb-5">Coming Soon.</h2>
