--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <header class="masthead">
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
-        <h1 class="animated flip" class="mx-auto my-0 text-uppercase">Coming Soon/h1>
+        <h1 class="animated flip" class="mx-auto my-0 text-uppercase">Coming Soon </h1>
         <br>
         <br>
         <h2 class="text-white-50 mx-auto mt-2 mb-5">Coming Soon.</h2>
