--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="Rick Jennings">
 
-  <title>Techialist - Welcome</title>
+  <title>Rick Jennings Portfolio - Welcome</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -29,7 +29,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="animated bounce" class="navbar-brand js-scroll-trigger" href="#page-top">Welcome</a>
+      <a class="animated bounce navbar-brand js-scroll-trigger" href="#page-top">Welcome to Rick Jennings Portfolio</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -54,10 +54,10 @@
   <header class="masthead">
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
-        <h1 class="animated flip" class="mx-auto my-0 text-uppercase">Coming Soon </h1>
+        <h1 class="animated flip mx-auto my-0 text-uppercase">Coming Soon</h1>
         <br>
         <br>
-        <h2 class="text-white-50 mx-auto mt-2 mb-5">Coming Soon.</h2>
+        <h2 class="text-white-50 mx-auto mt-2 mb-5"> </h2>
         <a href="#about" class="btn btn-primary js-scroll-trigger">Get Started</a>
       </div>
     </div>
@@ -83,7 +83,7 @@
       <!-- Featured Project Row -->
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-8 col-lg-7">
-          <img class="img-fluid mb-3 mb-lg-0" src="img/abstract-art-background-633409.jpg" alt="">
+          <img class="img-fluid mb-3 mb-lg-0" src="img/bg-masthead2.jpg" alt="">
         </div>
         <div class="col-xl-4 col-lg-5">
           <div class="featured-text text-center text-lg-left">
