updated title and banner

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
+  <meta name="description" content="Rick Jennings Portfolio">
   <meta name="author" content="Rick Jennings">
 
   <title>Rick Jennings Portfolio - Welcome</title>
@@ -211,7 +211,7 @@
   <!-- Footer -->
   <footer class="bg-black small text-center text-white-50">
     <div class="container">
-      Copyright &copy; Techialist 2019
+      Copyright &copy; Rick Jennings 2019
     </div>
   </footer>
 
